mirror_lang/test/valid/loop.mirror
(SET $counter = 5 TES)

(LOOPIF $counter > 0
    (LOG "Current val:" GOL)
    (LOG $counter GOL)
    (SET $counter = $counter - 1 TES)
FIPOOL)